--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% include "partials/_head.html" %}
+    {% include "blog/partials/_head.html" %}
+    {% block additional_head %}{% endblock additional_head %}
 </head>
 <body>
     {% include "blog/partials/_header.html" %}
-    {% block content %}{% endblock content %}
+    {% block content %}{% endblock content %} 
     {% include "blog/partials/_pagination.html" %}
-    {% include "blog/partials/_footerr.html" %}
+    {% include "blog/partials/_footer.html" %}
 </body>
 </html>
