modificando html de post e page

--- a/djangoapp/blog/static/blog/css/style.css
+++ b/djangoapp/blog/static/blog/css/style.css
@@ -200,6 +200,10 @@ html,
   padding-bottom: var(--spacing-base);
 }
 
+.mt-base {
+  margin-top: var(--spacing-base);
+}
+
 .center {
   text-align: center;
 }
