--- a/djangoapp/blog/templates/blog/pages/post.html
+++ b/djangoapp/blog/templates/blog/pages/post.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'blog/base.html' %} 
 
 {% block additional_head %}
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/codemirror.min.css">
@@ -12,17 +12,14 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/mode/xml/xml.min.js"></script>
 {% endblock additional_head %}
 
-
-
 {% block content %}
 <main class="main-content single-post section-wrapper">
   <div class="single-post-content section-content-narrow">
     <div class="single-post-gap section-gap">
 
       {% if post.cover and post.cover_in_post_content %}
-        <div class="single-post-cover pb-base post_img">
-          <img
-            style='margin: 0 auto'
+        <div class="single-post-cover pb-base">
+          <img 
             loading="lazy" 
             src="{{ post.cover.url }}" 
             alt="{{ post.title }}"
@@ -73,7 +70,7 @@
             </a>
           </div>
         {% endif %}
-
+      
       </div>
 
       <p class="single-post-excerpt pb-base">
@@ -84,21 +81,24 @@
 
       <div class="single-post-content">
         {{ post.content | safe  }} 
+      
+        {% if post.tags.exists %}
+          <div class="post-tags">
+            <span>Tags: </span>
 
-      {% if post.tags.exists %}
-        <div class="post-tags">
-          <span>Tags: </span>
-
-          {% for tag in post.tags.all %}
-            <a class="post-tag-link" href="{% url 'blog:tag' tag.slug %}">
-              <i class="fa-solid fa-link"></i>
-              <span>{{ tag.name }}</span>
-            </a>
-          {% endfor %}
-        </div>
-      {% endif %}
-
+            {% for tag in post.tags.all %}
+              <a class="post-tag-link" href="{% url 'blog:tag' tag.slug %}">
+                <i class="fa-solid fa-link"></i>
+                <span>{{ tag.name }}</span>
+              </a>
+            {% endfor %}
+          </div>
+        {% endif %}
+        
       </div>
-          
+    
+    </div>
+  </div>
+</main>
 
 {% endblock content %}
